shifting some stuff around and fixing padding issues on mobile

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,8 +1,13 @@
 .global-header {
-  padding: 1em 2em;
+  padding: 1em;
   display: grid;
   grid-template-columns: 75px 1fr;
   grid-gap: 2em;
+  max-width: 1100px;
+  margin: auto;
+  @media(min-width: 768px) {
+    padding: 1em 2em;
+  }
 }
 
 .logo {
